[tool.poetry]
name = "rabbit_action_test"
version = "0.1.0"
description = ""
authors = ["Willian Lopes <williangldzn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
